# GreenLab-Team-NoProbllama

./: .gitignore  .gitmodules  Makefile  README.md  execute-prompt.py  extract-response.py  instruction-runner.py  make_big_file.py  make_two_sum.py  prompts.txt  pyproject.toml  run-all.py  run-experiments.sh  run-instruction.sh  testcpp
R Data Analysis/: .RData  .Rhistory  check-normality.r  fix_data_and_graph_generation.ipynb  graphs.R  load-run-joules.r  reshape_data.R  rq1_testresults.csv  rq2_testresults.csv  rq3_testresults.csv  statistical-tests.r
energy/: RunnerConfig.py  make_two_sum.py  runner.py
energy/human/closest_number/: C++_closest_number.cpp  JavaScript_closest_number.js  Python_closest_number.py  closest_number.cpp  closest_number.js  closest_number.py
energy/human/file_replace/: C++_file_replace.cpp  JavaScript_file_replace.js  Python_file_replace.py
energy/human/two_sum/: C++_two_sum.cpp  JavaScript_two_sum.js  two_sum.cpp  two_sum.js  two_sum.py
energy/llama/closest_number/basic/: 0_6-C++-prompt-4.cpp  0_6-JavaScript-prompt-7.js  0_6-Python-prompt-1.py  0_8-C++-prompt-5.cpp  0_8-JavaScript-prompt-8.js  0_8-Python-prompt-2.py  1_0-C++-prompt-6.cpp  1_0-JavaScript-prompt-9.js  1_0-Python-prompt-3.py
energy/llama/closest_number/efficient/: 0_6-C++-prompt-4.cpp  0_6-JavaScript-prompt-7.js  0_6-Python-prompt-1.py  0_8-C++-prompt-5.cpp  0_8-JavaScript-prompt-8.js  0_8-Python-prompt-2.py  1_0-C++-prompt-6.cpp  1_0-JavaScript-prompt-9.js
energy/llama/two_sum/basic/: a.out  (+9 more)
energy/utils/: c_compile.py
server/: app.py  monsoon_service.py
(+23 files in other folders)
