[tool.poetry]
name = "greenlab-team-noprobllama"
version = "0.1.0"
description = "Codebase for testing the energy efficiency of LLama-generated code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
monsoon = "^0.1.88"
flask = "^3.0.0"
requests = "^2.31.0"
psutil = "^5.9.5"
tabulate = "^0.9.0"
dill = "^0.3.7"
jsonpickle = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
